force-app/main/default/objects/Order_Discount__c/Order_Discount__c.object-meta.xml
<CustomObject>
    <label>Order Discount</label>
    <nameField>
        <label>Order Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>