force-app/main/default/objects/Order_Discount__c/fields/Applied_Value__c.field-meta.xml
<CustomField>
    <fullName>Applied_Value__c</fullName>
    <label>Applied Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>