force-app/main/default/objects/Order_Discount__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Order Discounts</relationshipLabel>
    <relationshipName>Order_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>