force-app/main/default/objects/Order_Discount__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Discounts</relationshipLabel>
    <relationshipName>Order_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>